# Vision-Compass

./: .gitignore  Animations.qml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CMakeUserPresets.json.bak  CustomDialog.qml  Dialogs.qml  LICENSE  Main.qml  Main.qml.txt  README.md  appviewmodel.cpp  appviewmodel.h  devlog.md  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  task_manager.cpp  task_manager.hpp  user.hpp
include/: gui.hpp  task_manager.hpp  user.hpp
src/: gui.cpp  main.cpp  task_manager.cpp
